# thyme

./: .gitignore  README.md  Untitled 1.ods  main.py  pyproject.toml  today.py
thyme/: cli.py
thyme/calendar/: common.py  file.py  month.py  workday.py
thyme/commands/: month.py  service.py  workday.py
thyme/utils/: desktop.py
